--- a/Backend/alembic.ini
+++ b/Backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = ${DATABASE_URL}
+# sqlalchemy.url is set dynamically from environment variables in env.py
 
 [loggers]
 keys = root,sqlalchemy,alembic
